wireframes complete and ready for coding

--- a/WireFrames/CorrectBox.html
+++ b/WireFrames/CorrectBox.html
@@ -12,7 +12,7 @@
     <main>
         <header> Good Job! You got the Answer right ya NERD! ;)</header>
 
-        <section>
+        <section class="quizStart">
             <p>On the the next Nerdy question!</p>
             <button type="button" class="nextButton">Next</button>
         </section>
