--- a/WireFrames/ResultsBox.html
+++ b/WireFrames/ResultsBox.html
@@ -9,7 +9,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <section>
+    <section class="quizStart">
         <header>You have finished the Quiz!</header>
         <ul>
             <li>Right: 1</li>
