--- a/WireFrames/WrongBox.html
+++ b/WireFrames/WrongBox.html
@@ -12,7 +12,7 @@
     <main>
         <header> *Buzzer Sound* Sorry, but you are incorrect!</header>
 
-        <section>
+        <section class="quizStart">
             <p>Here is the actual answer</p>
             <p>On the the next Nerdy question!</p>
             <button type="button" class="nextButton">Next</button>
