--- a/WireFrames/questionBox.html
+++ b/WireFrames/questionBox.html
@@ -9,7 +9,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <section>
+    <section class="quizStart">
         <header>Question Number 1</header>
         <ul>
             <li>Question: <span class="questionNumber">1</span>/8</li>
@@ -40,7 +40,7 @@
                     <span>D: Answer 4</span>
                 </label>
             </fieldset>  
-            <button type="button" class="nextButton">Next</button>
+            <button type="button" class="submitButton">Submit</button>
         </form>
     </main>
 
