updated wireframe functinality

--- a/WireFrames/ResultsBox.html
+++ b/WireFrames/ResultsBox.html
@@ -16,7 +16,7 @@
             <li>Wrong: 8</li>
             <li>Score: 12.5%</li>
         </ul>
-        <button type="button" class="tryAgainButton">Try Again?</button>
+        <button type="button" class="tryAgainButton"><a href="index.html">Try Again?</a></button>
     </section>
 </body>
 </html>
