--- a/WireFrames/WrongBox.html
+++ b/WireFrames/WrongBox.html
@@ -15,7 +15,7 @@
         <section class="quizStart">
             <p>Here is the actual answer</p>
             <p>On the the next Nerdy question!</p>
-            <button type="button" class="nextButton">Next</button>
+            <button type="button" class="nextButton"><a href="ResultsBox.html">Next</a></button>
         </section>
     </main>
 </body>
