--- a/WireFrames/index.html
+++ b/WireFrames/index.html
@@ -16,7 +16,7 @@
         <section>
             <div class="quizStart">
                 <h1>How much of a Nerd are you?</h1>
-                <button type="button" class="startButton">Let's find out!</button>
+                <button type="button" class="startButton"><a href="questionBox.html">Let's find out!</a></button>
             </div>
         </section>
     </main>
