--- a/WireFrames/questionBox.html
+++ b/WireFrames/questionBox.html
@@ -18,7 +18,7 @@
     </section>
     <main>
         <div class="questionList">This is the first Question!</div>
-        <form>
+        <form action="CorrectBox.html">
             <fieldset>
                 <label>
                     <input class="answer" type="radio" name="option"></input>
@@ -40,7 +40,7 @@
                     <span>D: Answer 4</span>
                 </label>
             </fieldset>  
-            <button type="button" class="submitButton">Submit</button>
+            <button type="submit" class="submitButton">Submit</button>
         </form>
     </main>
 
