--- a/WireFrames/CorrectBox.html
+++ b/WireFrames/CorrectBox.html
@@ -14,7 +14,7 @@
 
         <section class="quizStart">
             <p>On the the next Nerdy question!</p>
-            <button type="button" class="nextButton">Next</button>
+            <button type="button" class="nextButton"><a href="WrongBox.html">Next!</a></button>
         </section>
     </main>
 </body>
